--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-iframe": "^1.8.0",
     "react-leaflet": "^2.8.0"
   },
   "devDependencies": {
